--- a/Geometry/G5_2166/2166.md
+++ b/Geometry/G5_2166/2166.md
@@ -10,4 +10,4 @@
 - 신발끈 공식이야!
 - list의 마지막에 시작점을 넣어줘야 한다는걸 잊지마!!
 
-![poly_area.png](../file/Geometry/poly_area.png)
+![poly_area.png](../../image/Geometry/poly_area.png)
